🐛 fix: template generators

--- a/generator/templates/chakra/component/component.tsx.hbs
+++ b/generator/templates/chakra/component/component.tsx.hbs
@@ -1,7 +1,7 @@
 import { Flex } from '@chakra-ui/react'
 
 export interface {{pascalCase name}}Props {
-  name: string
+  name?: string
 }
 
 export const {{pascalCase name}} = ({ name }: {{pascalCase name}}Props) => {
